# musicmap

./: .gitignore  CMakeLists.txt  LICENSE  Pipfile  README.md  mp3_manipulator.py  music_analyser.py  musicmap.py  musicnn-shell.nix  not-npys-to-sqlite.py  shell.nix  vic-graph-dict-to-sqlite.py
PCA/: calc.py  plot_2components.py  plot_3d_comp.py  plot_distribution.py
TSNE/: test.py  tsne_analysis.py  visualize.py
analysis/: extract.py  mp3_manipulator.py  music_analyser.py
graph/: 1_calc_cosine_similarity.py  2_create_cos_sim_graph.py  3_plot_cos_sim_graph.py  4_plot_path.py  calc_cosine_similarity.py  graph.py  plot_cosine_similarity.py  random_geometric_graph.py
graph/utils/: misc.py
musicmap/: schema.py
src/: imraii.ipp  main.cpp
